# Eduverse

./: .gitignore  README.md  custom.d.ts  package-lock.json  package.json  tsconfig.json
anchor_program/: .gitignore  Anchor.toml  package-lock.json
anchor_program/migrations/: deploy.ts
anchor_program/programs/anchor_program/: Cargo.toml
anchor_program/programs/anchor_program/src/: lib.rs
anchor_program/tests/: anchor_program.ts
programs/: Anchor.toml  Cargo.toml  README.md
programs/clients/js/: README.md  package.json
programs/clients/js/test/: increment.test.ts
programs/clients/rust/: Cargo.toml  README.md
programs/clients/rust/src/: lib.rs
programs/clients/rust/tests/: create.rs
programs/program/: Cargo.toml  README.md  keypair.json
programs/program/src/: lib.rs
programs/programs/solana_project/: Cargo.toml
programs/programs/solana_project/src/: lib.rs
programs/scripts/: generate-clients.mjs
programs/tests/: solana_project.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/signup/: page.tsx
src/app/(main)/: layout.tsx
src/app/(main)/components/: Navbar.tsx
src/app/(main)/start-learning/: page.tsx
src/app/api/auth/: route.ts
src/app/api/test-supabase/: route.ts
src/app/courses/: page.tsx
src/app/dashboard/: page.tsx
src/app/start-learning/: page.tsx
src/app/start-teaching/: page.tsx
src/app/test/: page.tsx
src/components/: WalletProvider.tsx  app-header.tsx  app-layout.tsx  theme-select.tsx
src/components/cluster/: cluster-ui.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: accordion.tsx  button.tsx  form.tsx  progress.tsx  tabs.tsx
src/constant/: index.ts
src/lib/: routes.ts
utils/supabase/: server.ts
(+31 files in other folders)
