[workspace]
resolver = "2"
members = ["clients/rust", "program"]

[profile.release]
overflow-checks = true

[workspace.metadata.cli]
anchor = "0.31.1"
solana = "2.1.21"

# Specify Rust toolchains for rustfmt, clippy, and build.
# Any unprovided toolchains default to stable.
[workspace.metadata.toolchains]
format = "1.86.0"
lint = "1.86.0"
